This takes information from CUDA. It tests with data coming from a sample output file.